--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -2,50 +2,62 @@
   position: relative;
   z-index: 100;
   overflow: hidden;
+
   &__panel {
     color: #fff;
     background: rgba(32, 32, 32, 0.9)
   }
+
   &__contacts {
     align-items: center;
   }
+
   &__contact {
     font-size: 14px;
     line-height: 16px;
+
     &:after {
       content: '|';
       color: #868585;
       margin-left: 6px;
       margin-right: 6px;
     }
+
     &:last-of-type {
       &:after {
         display: none;
       }
     }
   }
+
   &__cart {
     width: 218px;
     height: 60px;
     margin-left: auto;
   }
+
   &__inner {
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+
     &-wrap {
       align-items: center;
     }
   }
+
   &__logo {
     width: 192px;
     height: 50px;
+
     a {
       border-bottom: none;
     }
   }
+
   &__nav {
     margin-left: auto;
     margin-right: 40px;
   }
+
   &__phone {
     display: flex;
     align-items: center;
@@ -57,13 +69,16 @@
     line-height: 28px;
     font-weight: 700;
     border-left: 1px solid rgba(255, 255, 255, 0.3);
+
     a {
       border-bottom: none;
       color: #fff;
     }
   }
+
   &__bg {
     height: 100vh;
+
     &:before {
       content: '';
       position: absolute;
@@ -71,7 +86,15 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background: rgba(0,0,0,0.4);
+      background: rgba(0, 0, 0, 0.4);
+    }
+  }
+}
+
+@media screen and (max-width: 1220px) {
+  .header {
+    &__nav {
+      margin-right: 20px;
     }
   }
 }
