--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -3,7 +3,9 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
-*, :before, :after {
+*,
+:before,
+:after {
   padding: 0;
   margin: 0;
   border: 0;
@@ -11,7 +13,8 @@
   -webkit-tap-highlight-color: transparent;
 }
 
-html, body {
+html,
+body {
   min-height: 100vh;
 }
 
@@ -26,12 +29,18 @@ body {
   -webkit-touch-callout: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font: inherit;
   display: inline;
 }
 
-ol, ul {
+ol,
+ul {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
@@ -51,7 +60,9 @@ a {
   border-bottom: 1px solid transparent;
 }
 
-input, textarea, button {
+input,
+textarea,
+button {
   outline: none;
   appearance: none;
 }
@@ -91,7 +102,12 @@ svg {
   user-select: none;
 }
 
-img, svg, path, circle, rect, line {
+img,
+svg,
+path,
+circle,
+rect,
+line {
   transition: .3s;
 }
 
@@ -102,22 +118,23 @@ img, svg, path, circle, rect, line {
 }
 
 .case {
-	position: relative;
-	width: 100%;
-	padding-left: 20px;
-	padding-right: 20px;
-	margin: 0 auto;
-	max-width: 1200px;
-	.case {
-		padding-left: 0;
-		padding-right: 0;
+  position: relative;
+  width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0 auto;
+  max-width: 1200px;
+
+  .case {
+    padding-left: 0;
+    padding-right: 0;
   }
 }
-		
+
 
 .row {
-	display: flex;
-	flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .bgw {
@@ -132,6 +149,7 @@ img, svg, path, circle, rect, line {
   left: 0;
   right: 0;
   bottom: 0;
+
   img {
     width: 100%;
     height: 100%;
@@ -164,8 +182,10 @@ img, svg, path, circle, rect, line {
 .t1 {
   line-height: 1.7;
   font-weight: 300;
+
   p {
     margin-bottom: 27px;
+
     &:last-child {
       margin-bottom: 0;
     }
@@ -174,6 +194,7 @@ img, svg, path, circle, rect, line {
 
 .t2 {
   line-height: 1.7;
+
   h3 {
     display: block;
     font-size: 20px;
@@ -181,12 +202,15 @@ img, svg, path, circle, rect, line {
     font-weight: 700;
     margin-top: 35px;
     margin-bottom: 14px;
+
     &:first-child {
       margin-top: 0;
     }
-  } 
+  }
+
   p {
     margin-bottom: 13px;
+
     &:last-child {
       margin-bottom: 0;
     }
@@ -196,7 +220,42 @@ img, svg, path, circle, rect, line {
 .block {
   padding-top: 95px;
   padding-bottom: 95px;
+
   &__title {
     margin-bottom: 50px;
+  }
+}
+
+@media screen and (max-width: 1220px) {
+  .case {
+    width: 960px;
+  }
+}
+
+
+@media screen and (max-width: 992px) {
+  .case {
+    width: 730px;
+  }
+}
+
+
+@media screen and (max-width: 767px) {
+  .case {
+    width: 560px;
+  }
+}
+
+
+@media screen and (max-width: 580px) {
+  .case {
+    width: 390px;
+  }
+}
+
+
+@media screen and (max-width: 410px) {
+  .case {
+    width: 100%;
   }
 }
