--- a/components/Card/Card.scss
+++ b/components/Card/Card.scss
@@ -5,19 +5,23 @@
     width: 400px;
     height: 400px;
   }
+
   &__content {
     width: calc(100% - 400px);
     padding-left: 90px;
     align-items: flex-start;
   }
+
   &__settings {
     width: calc(100% - 180px - 40px);
   }
+
   &__stock {
     width: 180px;
     padding: 34px 17px 37px;
     background: #F5F5F5;
     margin-left: auto;
+
     &-title {
       color: $green;
       font-size: 12px;
@@ -25,30 +29,36 @@
       font-weight: 700;
       margin-bottom: 37px;
     }
+
     &-text {
       font-size: 12px;
       line-height: 1.3;
       font-weight: 700;
     }
+
     &-button {
       margin-top: 35px;
     }
   }
+
   &__settings {
     &-line {
       display: flex;
       align-items: center;
       margin-bottom: 25px;
+
       &:last-child {
         margin-bottom: 0;
       }
     }
+
     &-name {
       width: 130px;
       min-width: 130px;
       line-height: 21px;
       font-weight: 700;
     }
+
     &-list {
       display: flex;
       flex-wrap: wrap;
@@ -56,9 +66,11 @@
       justify-content: flex-end;
       width: calc(100% - 130px);
     }
+
     &-item {
       margin-left: 15px;
     }
+
     &-desc {
       width: calc(100% - 130px);
       padding-left: 15px;
@@ -69,45 +81,91 @@
       color: $green;
     }
   }
+
   &__data {
     position: relative;
     margin-top: 60px;
     width: 100%;
   }
+
   &__price {
     width: 40%;
     min-height: 112px;
+
     &-main {
       font-size: 28px;
       line-height: 1.3;
       font-weight: 700;
     }
+
     &-list {
       margin-top: 7px;
     }
+
     &-item {
       line-height: 1.3;
       margin-bottom: 3px;
+
       &:last-child {
         margin-bottom: 0;
       }
     }
   }
+
   &__controls {
     width: 60%;
     justify-content: flex-end;
     align-items: flex-start;
   }
+
   &__incdec {
     margin-right: 40px;
     width: 118px;
   }
+
   &__button-add {
     width: 180px;
   }
+
   &__desc {
     position: absolute;
     right: 0;
     bottom: 0;
+  }
+}
+
+@media screen and (max-width: 1220px) {
+  .card {
+    &__img {
+      width: 350px;
+      height: 420px;
+    }
+
+    &__content {
+      width: calc(100% - 350px);
+      padding-left: 30px;
+    }
+
+    &__settings {
+      width: calc(100% - 160px);
+
+      &-name {
+        width: 100px;
+        min-width: 100px;
+      }
+
+      &-item {
+        margin-left: 10px;
+      }
+    }
+
+    &__stock {
+      width: 160px;
+    }
+
+    &__incdec {
+      margin-right: 10px;
+    }
+
   }
 }
