--- a/components/Footer/Footer.scss
+++ b/components/Footer/Footer.scss
@@ -3,28 +3,49 @@
   padding-bottom: 56px;
   color: #fff;
   background: #393939;
+
   &__left {
     width: 375px;
     padding-top: 4px;
   }
+
   &__copy {
     line-height: 1.7;
     font-weight: 300;
     margin-top: 28px;
   }
+
   &__mid {
     width: 300px;
     padding-right: 20px;
     margin-left: auto;
   }
+
   &__right {
     width: 370px;
   }
+
   &__title {
     font-size: 18px;
     line-height: 1.2;
     font-weight: 700;
     text-transform: uppercase;
     margin-bottom: 17px;
+  }
+}
+
+@media screen and (max-width: 1220px) {
+  .footer {
+    &__left {
+      width: 300px;
+    }
+
+    &__mid {
+      width: 220px;
+    }
+
+    &__right {
+      width: 310px;
+    }
   }
 }
