--- a/components/Info/Info.scss
+++ b/components/Info/Info.scss
@@ -2,21 +2,48 @@
   &__left {
     width: 600px;
   }
+
   &__img {
     width: 100%;
     height: 524px;
   }
+
   &__right {
     width: calc(100% - 600px);
     padding-left: 70px;
   }
+
   &__text {
     &_pt {
       padding-top: 22px;
     }
   }
+
   &__button {
     width: 200px;
     margin-top: 40px;
+  }
+}
+
+@media screen and (max-width: 1220px) {
+  .info {
+    &__left {
+      width: 480px;
+    }
+
+    &__img {
+      height: 450px;
+    }
+
+    &__right {
+      width: calc(100% - 480px);
+      padding-left: 50px;
+    }
+
+    &__text {
+      &_pt {
+        padding-top: 0;
+      }
+    }
   }
 }
