--- a/components/Card/Card.scss
+++ b/components/Card/Card.scss
@@ -169,3 +169,56 @@
 
   }
 }
+
+@media screen and (max-width: 992px) {
+  .card {
+    &__wrap {
+      position: relative;
+      padding-bottom: calc(115px + 40px)
+    }
+
+    &__img {
+      width: 320px;
+      height: 363px;
+    }
+
+    &__content {
+      width: calc(100% - 320px);
+    }
+
+    &__settings {
+      width: 100%;
+      margin-bottom: 20px;
+
+      &-list {
+        width: calc(100% - 100px);
+      }
+
+      &-line {
+        justify-content: space-between;
+        margin-bottom: 18px;
+      }
+    }
+
+    &__stock {
+      width: 100%;
+      padding: 15px 20px;
+
+      &-title {
+        margin-bottom: 15px;
+      }
+
+      &-button {
+        margin-top: 15px;
+      }
+    }
+
+    &__data {
+      min-height: 115px;
+      margin-top: 40px;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+    }
+  }
+}
