--- a/components/Catalog/Catalog.scss
+++ b/components/Catalog/Catalog.scss
@@ -2,10 +2,21 @@
   &__list {
     margin: 0 -5px -45px;
   }
+
   &__item {
     width: calc(100% / 5);
     padding-left: 5px;
     padding-right: 5px;
     margin: 0 0 45px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .catalog {
+    &__item {
+      width: calc(100% / 3);
+      padding-right: 7px;
+      padding-left: 7px;
+    }
   }
 }
