--- a/components/Info/Info.scss
+++ b/components/Info/Info.scss
@@ -47,3 +47,31 @@
     }
   }
 }
+
+@media screen and (max-width: 992px) {
+  .info {
+    &__wrap {
+      flex-direction: column;
+    }
+
+    &__left {
+      width: 100%;
+      margin-bottom: 20px;
+    }
+
+    &__img {
+      height: 400px;
+
+    }
+
+    &__right {
+      padding-left: 0;
+      width: 100%;
+    }
+
+    &__button {
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+}
