--- a/components/Product/Product.scss
+++ b/components/Product/Product.scss
@@ -5,10 +5,12 @@
     width: 100%;
     height: 224px;
     overflow: hidden;
+
     img {
       transition: .5s;
     }
   }
+
   &__name {
     line-height: 1.3;
     text-align: center;
@@ -16,6 +18,7 @@
     transition: .3s;
     margin-top: 25px;
   }
+
   &:hover {
     .product {
       &__img {
@@ -23,6 +26,7 @@
           transform: scale(1.1);
         }
       }
+
       &__name {
         color: $green;
       }
@@ -30,3 +34,10 @@
   }
 }
 
+@media screen and (max-width: 992px) {
+  .product {
+    &__name {
+      margin-top: 18px;
+    }
+  }
+}
