--- a/components/Crt/Crt.scss
+++ b/components/Crt/Crt.scss
@@ -5,17 +5,33 @@
   align-items: center;
   justify-content: center;
   background: $green;
+
   &__icon {
     width: 22px;
     margin-right: 18px;
   }
+
   &__values {
     color: #fff;
+
     b {
       font-weight: 700;
     }
   }
+
   &:hover {
     background: darken($green, 5%);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .crt {
+    &__icon {
+      margin-right: 0;
+    }
+
+    &__values {
+      display: none;
+    }
   }
 }
