--- a/components/Map/Map.scss
+++ b/components/Map/Map.scss
@@ -19,3 +19,31 @@
     }
   }
 }
+
+@media screen and (max-width: 767px) {
+  .map {
+    &_sm {
+      height: 250px;
+    }
+
+    &_md {
+      height: 300px;
+    }
+  }
+}
+
+@media screen and (max-width: 410px) {
+  .map {
+    &_sm {
+      height: 200px;
+    }
+
+    &_md {
+      height: 250px;
+    }
+
+    &_mb {
+      margin-bottom: 25px;
+    }
+  }
+}
