--- a/components/Advantages/Advantages.scss
+++ b/components/Advantages/Advantages.scss
@@ -62,3 +62,72 @@
     }
   }
 }
+
+@media screen and (max-width: 767px) {
+  .advantages {
+    &__item {
+
+      &:nth-of-type(4),
+      &:nth-of-type(5) {
+        padding: 10px 20px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .advantages {
+    &__item {
+      width: 50%;
+      padding: 10px;
+
+      &:nth-of-type(3) {
+        border-top: 1px solid hsla(0, 0%, 100%, .3);
+      }
+
+      &:nth-of-type(4) {
+        padding: 10px;
+      }
+
+      &:nth-of-type(5) {
+        width: 100%;
+        padding: 10px 80px;
+      }
+    }
+
+    &__icon {
+      width: 30px;
+      height: 30px;
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    &__name {
+      font-size: 13px;
+      font-weight: 500;
+    }
+  }
+}
+
+@media screen and (max-width: 410px) {
+  .advantages {
+    &__item {
+
+      &:nth-of-type(5) {
+        padding: 10px 40px;
+      }
+    }
+
+    &__icon {
+      width: 25px;
+      height: 25px;
+    }
+
+    &__name {
+      font-size: 12px;
+    }
+  }
+}
