--- a/components/Card/Card.scss
+++ b/components/Card/Card.scss
@@ -222,3 +222,28 @@
     }
   }
 }
+
+@media screen and (max-width: 767px) {
+  .card {
+    &__wrap {
+      flex-direction: column;
+      padding-bottom: 0;
+    }
+
+    &__img {
+      width: 100%;
+      height: 300px;
+      margin-bottom: 20px;
+    }
+
+    &__content {
+      width: 100%;
+      padding-left: 0;
+    }
+
+    &__data {
+      position: relative;
+      min-height: auto;
+    }
+  }
+}
