--- a/components/Catalog/Catalog.scss
+++ b/components/Catalog/Catalog.scss
@@ -20,3 +20,31 @@
     }
   }
 }
+
+@media screen and (max-width: 767px) {
+  .catalog {
+    &__list {
+      margin: 0 -5px -25px;
+    }
+
+    &__item {
+      width: calc(100% / 2);
+      margin: 0 0 25px;
+    }
+  }
+}
+
+@media screen and (max-width: 410px) {
+  .catalog {
+    &__list {
+      margin: 0 -5px -25px;
+    }
+
+    &__item {
+      width: 100%;
+      margin: 0 0 25px;
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+  }
+}
