--- a/components/Footer/Footer.scss
+++ b/components/Footer/Footer.scss
@@ -80,6 +80,7 @@
       flex-direction: column;
       align-items: flex-end;
       text-align: right;
+      padding-right: 0;
     }
 
     &__nav {
@@ -98,5 +99,57 @@
       width: 50%;
       order: 2;
     }
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .footer {
+    padding-top: 35px;
+    padding-bottom: 35px;
+
+    &__left {
+      margin-bottom: 40px;
+    }
+
+    &__logo {
+      svg {
+        width: 170px;
+        margin-left: 0;
+      }
+    }
+
+    &__copy {
+      font-size: 14px;
+      margin-top: 15px;
+      text-align: left;
+    }
+
+    &__right {
+      width: 100%;
+      margin-bottom: 40px;
+    }
+
+    &__mid {
+      width: 100%;
+      align-items: flex-start;
+    }
+
+    &__nav {
+      &.nav_col {
+        align-items: flex-start;
+
+        .nav {
+          &__item {
+            margin-bottom: 12px;
+          }
+        }
+      }
+
+    }
+
+    &__title {
+      font-size: 17px;
+    }
+
   }
 }
