--- a/components/Offer/Offer.scss
+++ b/components/Offer/Offer.scss
@@ -38,3 +38,26 @@
     }
   }
 }
+
+@media screen and (max-width: 767px) {
+  .offer {
+    &__item {
+      width: calc(100% / 2);
+      margin: 0 0 14px;
+
+      &:last-of-type {
+        width: 100%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 410px) {
+  .offer {
+    &__item {
+      width: 100%;
+      padding-right: 30px;
+      padding-left: 30px;
+    }
+  }
+}
