--- a/components/Card/Card.scss
+++ b/components/Card/Card.scss
@@ -247,3 +247,88 @@
     }
   }
 }
+
+@media screen and (max-width: 580px) {
+  .card {
+    &__img {
+      height: 250px;
+    }
+
+    &__settings {
+      &-line {
+        margin-bottom: 15px;
+      }
+
+      &-name {
+        font-size: 15px;
+      }
+    }
+
+    &__stock {
+
+      &-title,
+      &-text {
+        font-size: 14px;
+      }
+    }
+
+    &__price {
+      &-item {
+        font-size: 15px;
+      }
+    }
+
+    &__desc {
+      position: relative;
+      order: 3;
+      margin-top: 10px;
+    }
+  }
+}
+
+@media screen and (max-width: 410px) {
+  .card {
+    &__img {
+      height: 200px;
+    }
+
+    &__settings {
+      &-line {
+        margin-bottom: 10px;
+      }
+
+      &-name {
+        font-size: 13px;
+      }
+
+      &-item {
+        padding: 5px 10px 5px;
+      }
+    }
+
+    &__stock {
+
+      &-title,
+      &-text {
+        font-size: 13px;
+      }
+    }
+
+    &__price {
+      &-main {
+        font-size: 26px;
+      }
+
+      &-item {
+        font-size: 14px;
+      }
+    }
+
+    &__desc {
+      position: relative;
+      order: 3;
+      margin-top: 10px;
+      font-size: 14px;
+    }
+  }
+}
