--- a/components/Breadcrumb/Breadcrumb.scss
+++ b/components/Breadcrumb/Breadcrumb.scss
@@ -3,33 +3,49 @@
   padding-top: 5px;
   padding-bottom: 7px;
   background: rgba(32, 32, 32, 0.6);
+
   .case {
     * {
       display: inline;
     }
   }
+
   &__list {
     display: flex;
   }
+
   &__item {
     font-size: 14px;
     line-height: 16px;
+
     &:after {
       content: '/';
       margin-left: 6px;
       margin-right: 6px;
     }
+
     &:last-of-type {
       color: #BEBEBE;
+
       &:after {
         display: none;
       }
     }
+
     a {
       color: #fff;
+
       &:hover {
         border-color: #fff;
       }
+    }
+  }
+}
+
+@media screen and (max-width: 410px) {
+  .breadcrumb {
+    &__item {
+      font-size: 13px;
     }
   }
 }
