--- a/components/Footer/Footer.scss
+++ b/components/Footer/Footer.scss
@@ -3,6 +3,7 @@
   padding-bottom: 56px;
   color: #fff;
   background: #393939;
+  margin-top: auto;
   &__left {
     width: 375px;
     padding-top: 4px;
