--- a/components/Cart/Cart.scss
+++ b/components/Cart/Cart.scss
@@ -25,6 +25,7 @@
       }
     }
     td {
+      font-size: 12px;
       padding: 15px 15px;
       text-align: center;
       border-bottom: 1px solid #BEBEBE;
