--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -2,7 +2,7 @@
   position: relative;
   z-index: 100;
   overflow: hidden;
-
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   &__panel {
     color: #fff;
     background: rgba(32, 32, 32, 0.9)
@@ -39,7 +39,6 @@
   }
 
   &__inner {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 
     &-wrap {
       align-items: center;
@@ -63,7 +62,7 @@
   &__phone {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     text-align: center;
     width: 218px;
     height: 76px;
